# paradis

./: Cargo.toml  LICENSE  README.md
examples/: even_odd.rs  even_odd_pointers.rs  rayon_access_iter_matrix_cols.rs  rayon_access_iter_slice.rs
paradis-core/: Cargo.toml
paradis-core/src/: lib.rs  slice.rs
src/: lib.rs  rayon.rs  slice.rs
tests/: unit.rs
tests/unit_tests/: mod.rs  slice.rs
