[package]
name = "paradis"
version = "0.1.0"
edition = "2021"

[features]
rayon = [ "dep:rayon" ]

[[example]]
name = "rayon_access_iter_slice"
required-features = [ "rayon" ]

[[example]]
name = "rayon_access_iter_matrix_cols"
required-features = [ "rayon" ]

[dependencies]
rayon = { version = "1.6.1", optional = true }

[dev-dependencies]
## Used for some examples. TODO: Ideally this would be optional, but it doesn't look
## like this is possible?
nalgebra = { version = "0.32.1" }
