[package]
name = "paradis"
version = "0.0.2"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Andlon/paradis"
description = "Experimental parallel processing of disjoint indices"

[features]
rayon = [ "dep:rayon" ]

[dependencies]
paradis-core = { version = "0.0.1", path = "paradis-core" }
rayon = { version = "1.6.1", optional = true }

[[example]]
name = "rayon_access_iter_slice"
required-features = [ "rayon" ]

[[example]]
name = "rayon_access_iter_matrix_cols"
required-features = [ "rayon" ]

[dev-dependencies]
## Used for some examples. TODO: Ideally this would be optional, but it doesn't look
## like this is possible?
nalgebra = { version = "0.32.1" }

[workspace]
members = [ "paradis-core" ]

[package.metadata.docs.rs]
features = [ "rayon" ]